<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_ModbusMapCoils" Id="{5488beb2-0954-4af2-ad86-ef5ab10bcfa8}">
    <Declaration><![CDATA[// Factoryio modbus mapping for digital outputs
TYPE ST_ModbusMapCoils:
STRUCT
    // H0 Reset light
    bBtnResetLight: BIT;
    // H1 Start light
    bBtnStartLight: BIT;
    // H2 Stop light
    bBtnStopLight: BIT;
    // B0 Alarm Siren
    bAlarmSiren: BIT;
    // H20 Signal Light Red
    bStackLightRed: BIT;
    // H21 Signal Light Green
    bStackLightGreen: BIT;
    // H22 Signal Light Yellow
    bStackLightYellow: BIT;
    // M10 Entry conveyor
    bConveyorFeed: BIT;
    // M12 Load scale
    bConveyorScale: BIT;
    // M20 Left conveyor
    bConveyorLeft: BIT;
    // M30 Front conveyor
    bConveyorForward: BIT;
    // M40 Right conveyor
    bConveyorRight: BIT;
    // M50 Send left
    bSorterLeft: BIT;
    // M51 Send forward
    bSorterRaise: BIT;
    // M52 Send right
    bSorterRight: BIT;
    // bOut15
    {attribute 'hide'}
    bOut15: BIT;
    // bOut16
    {attribute 'hide'}
    bOut16: BIT;
    // bOut17
    {attribute 'hide'}
    bOut17: BIT;
    // bOut18
    {attribute 'hide'}
    bOut18: BIT;
    // bOut19
    {attribute 'hide'}
    bOut19: BIT;
    // bOut20
    {attribute 'hide'}
    bOut20: BIT;
    // bOut21
    {attribute 'hide'}
    bOut21: BIT;
    // bOut22
    {attribute 'hide'}
    bOut22: BIT;
    // Emitter
    bEmitter: BIT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>