<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_ModbusMapInputRegs" Id="{c9aea455-9ef2-4ae7-8ae0-8c170e158fe9}">
    <Declaration><![CDATA[// Factoryio modbus mapping for analog inputs
TYPE ST_ModbusMapInputRegs:
STRUCT
    // Gewicht
    fScaleWeight: WORD;
    // nIn1
    {attribute 'hide'}
    nIn1: WORD;
    // nIn2
    {attribute 'hide'}
    nIn2: WORD;
    // nIn3
    {attribute 'hide'}
    nIn3: WORD;
    // nIn4
    {attribute 'hide'}
    nIn4: WORD;
    // FACTORY I/O (Time Scale)
    fFactoryTimeScale: WORD;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>